# snowglobe

./: .gitignore  CHANGELOG.md  README.md  claude-code-briefing.md  phase-2b-instructions.md  phase-3-instructions.md  test_captured_style.py  test_pmtiles_validation.py  validate_new_pmtiles.py  viewer.html
.history/: README_20241111214059.md  README_20241111214206.md  README_20241111215317.md  claude-code-briefing_20251205234923.md  claude-code-briefing_20251205234938.md
cli/: README.md  pyproject.toml
cli/src/webmap_archiver/: __init__.py  api.py  cli.py  modal_app.py
cli/src/webmap_archiver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cli/src/webmap_archiver/archive/: __init__.py  packager.py
cli/src/webmap_archiver/capture/: __init__.py  browser_capture.py  parser.py  processor.py  style_extractor.py
cli/src/webmap_archiver/har/: parser.py
cli/src/webmap_archiver/site/: __init__.py  extractor.py
cli/src/webmap_archiver/sources/: __init__.py  geojson_fetcher.py
cli/src/webmap_archiver/styles/: __init__.py  extractor.py
cli/src/webmap_archiver/templates/: serve.py
cli/src/webmap_archiver/tiles/: coverage.py  detector.py  fetcher.py  layer_inspector.py  pmtiles.py
cli/src/webmap_archiver/viewer/: generator.py
cli/tests/: __init__.py  test_api.py  test_integration.py
docs/: architecture-overview.md  capture-bundle-spec.md  modal-deployment-guide.md
docs/instructions/: 03-PHASE-3-IMPLEMENTATION-SUMMARY.md  05-phase-3b-implementation.md  06-api-refactor-instructions.md  07-update-modal-deployment.md  09-implementation-phases.md  10-pypuppeteer-instructions.md  15-qol-part-1.md  16-v032-implementation-instructions.md  17-fix-tile-range-issues.md  18-v040-part-1.md  19-geojson-capture-updates.md  20-updated-geojson-capture.md  21-capture-via-injection.md  MODAL-DEPLOYMENT-SUCCESS.md  address-critical-issues.md  fix-font-sprite-issues.md  fix-url-source-matching.md  implementation-phases.md  style-extractions-instructions.md  update-basemap-parsing.md
docs/triage/: sprite-glyph-loading-issue.md
extension/: LOAD-IN-CHROME.md  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/_locales/en/: messages.json
extension/src/: config.ts
extension/src/background/: service-worker.ts
extension/src/content/: capturer.ts  detector.ts  index.ts  map-hook.ts
extension/src/devtools/: devtools.ts  panel.html  panel.ts  panel.ts.bak
nyc-parking-final/: manifest.json  viewer.html
nyc-parking-final/style/: extracted_layers.json
nyc-parking-final/tiles/: maptiler-385.pbf.pmtiles
webmap-archiver/: README.md
(+21 files in other folders)
